[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/StarsTab.gd" type="Script" id=1]

[node name="Stars" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeALabel" type="Label" parent="VBox"]
margin_top = 413.0
margin_right = 1472.0
margin_bottom = 427.0
text = "Type A Controls"
align = 1

[node name="HBoxTypeA" type="HBoxContainer" parent="VBox"]
margin_top = 431.0
margin_right = 1472.0
margin_bottom = 451.0

[node name="ColorPickerButtonA" type="ColorPickerButton" parent="VBox/HBoxTypeA"]
margin_right = 734.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="OptionButtonA" type="OptionButton" parent="VBox/HBoxTypeA"]
margin_left = 738.0
margin_right = 1472.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Dot"
selected = 0

[node name="HSeparator" type="HSeparator" parent="VBox"]
margin_top = 455.0
margin_right = 1472.0
margin_bottom = 459.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeBLabel" type="Label" parent="VBox"]
margin_top = 463.0
margin_right = 1472.0
margin_bottom = 477.0
text = "Type B Controls"
align = 1

[node name="HBoxTypeB" type="HBoxContainer" parent="VBox"]
margin_top = 481.0
margin_right = 1472.0
margin_bottom = 501.0

[node name="ColorPickerButtonB" type="ColorPickerButton" parent="VBox/HBoxTypeB"]
margin_right = 734.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="OptionButtonB" type="OptionButton" parent="VBox/HBoxTypeB"]
margin_left = 738.0
margin_right = 1472.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Dot"
selected = 0

[node name="HSeparator2" type="HSeparator" parent="VBox"]
margin_top = 505.0
margin_right = 1472.0
margin_bottom = 509.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeCLabel" type="Label" parent="VBox"]
margin_top = 513.0
margin_right = 1472.0
margin_bottom = 527.0
text = "Type C Controls"
align = 1

[node name="HBoxTypeC" type="HBoxContainer" parent="VBox"]
margin_top = 531.0
margin_right = 1472.0
margin_bottom = 551.0

[node name="ColorPickerButtonC" type="ColorPickerButton" parent="VBox/HBoxTypeC"]
margin_right = 734.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="OptionButtonC" type="OptionButton" parent="VBox/HBoxTypeC"]
margin_left = 738.0
margin_right = 1472.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Dot"
selected = 0

[connection signal="color_changed" from="VBox/HBoxTypeA/ColorPickerButtonA" to="." method="_on_ColorPickerButtonA_color_changed"]
[connection signal="item_selected" from="VBox/HBoxTypeA/OptionButtonA" to="." method="_on_OptionButtonA_item_selected"]
[connection signal="color_changed" from="VBox/HBoxTypeB/ColorPickerButtonB" to="." method="_on_ColorPickerButtonB_color_changed"]
[connection signal="item_selected" from="VBox/HBoxTypeB/OptionButtonB" to="." method="_on_OptionButtonB_item_selected"]
[connection signal="color_changed" from="VBox/HBoxTypeC/ColorPickerButtonC" to="." method="_on_ColorPickerButtonC_color_changed"]
[connection signal="item_selected" from="VBox/HBoxTypeC/OptionButtonC" to="." method="_on_OptionButtonC_item_selected"]
